--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="style.css"> <!-- your custom CSS -->
 </head>
-<body class="font-sans">
+<body class="font-sans bg-gradient-to-r from-green-200 to-blue-200">
 
 <!-- Header -->
 <header class="bg-white shadow sticky top-0 z-50">
