--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   body { 
     font-family: "Helvetica Neue", Arial, sans-serif; 
     margin: 0; 
-    background: #fafafa; 
+    min-height: 100vh;
+    background: linear-gradient(to right, #d9fdd3, #d3e9ff); /* pale green → pale blue */
     color: #333;
   }
 
@@ -39,7 +40,7 @@
 
   /* 🟣 Card Style */
   .card {
-    --card-bg: #ffffff;
+    --card-bg: rgba(255,255,255,0.8); /* semi-transparent white */
     --card-accent: #7c3aed;
     --card-text: #1e293b;
     --card-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
@@ -50,14 +51,15 @@
     overflow: hidden;
     transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
     box-shadow: var(--card-shadow);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     display: flex;
     flex-direction: column;
+    backdrop-filter: blur(6px); /* soft glass effect */
   }
 
   .card__shine { position: absolute; inset: 0; background: linear-gradient(120deg, rgba(255,255,255,0) 40%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 60%); opacity: 0; transition: opacity 0.3s ease; }
-  .card__glow { position: absolute; inset: -10px; background: radial-gradient(circle at 50% 0%, rgba(124,58,237,0.3) 0%, rgba(124,58,237,0) 70%); opacity: 0; transition: opacity 0.5s ease; }
+  .card__glow { position: absolute; inset: -10px; background: radial-gradient(circle at 50% 0%, rgba(124,58,237,0.25) 0%, rgba(124,58,237,0) 70%); opacity: 0; transition: opacity 0.5s ease; }
 
   .card__content { padding: 1.25em; display: flex; flex-direction: column; gap: 0.75em; position: relative; z-index: 2; flex: 1 1 auto; }
 
@@ -70,7 +72,7 @@
 
   .card__footer { display: flex; justify-content: center; align-items: center; margin-top: auto; }
 
-  /* 🟡 Uiverse.io Add to Cart Button */
+  /* 🟡 Add to Cart Button */
   button {
     --button_radius: 0.75em;
     --button_color: #e8e8e8;
@@ -94,7 +96,7 @@
   button:active .button_top { transform: scale(0.95); }
 
   /* Hover Effects */
-  .card:hover { transform: translateY(-10px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04); border-color: rgba(124,58,237,0.2); }
+  .card:hover { transform: translateY(-10px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.15), 0 10px 10px -5px rgba(0,0,0,0.05); border-color: rgba(124,58,237,0.25); }
   .card:hover .card__shine { opacity: 1; animation: shine 3s infinite; }
   .card:hover .card__glow { opacity: 1; }
 
@@ -105,7 +107,7 @@
     .products { grid-template-columns: repeat(2, 1fr); }
   }
 
-  /* Desktop: 4 per row, smaller width and centered */
+  /* Desktop: 4 per row */
   @media (min-width: 769px) {
     .products {
       grid-template-columns: repeat(4, 1fr);
@@ -113,11 +115,7 @@
       margin: 0 auto;
       gap: 20px;
     }
-    /* Desktop-only image fix: let images expand without cropping */
-    .card__image {
-      max-height: none;
-      flex-grow: 1;
-    }
+    .card__image { max-height: none; flex-grow: 1; }
   }
 </style>
 </head>
