--- a/product.html
+++ b/product.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
-<link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
+  <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css"> <!-- your custom CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
 
@@ -31,7 +31,6 @@
     class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"
     oninput="filterProducts()"
   >
-  <!-- Search Preview Dropdown -->
   <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
 </div>
 
@@ -53,14 +52,19 @@
     </button>
   </div>
   <hr class="my-3">
+  
   <div id="cart-items" class="space-y-6"></div>
-  <div class="mt-8 flex justify-center">
+
+  <!-- ✅ Cart total -->
+  <div id="cart-total" class="mt-6 text-lg font-bold text-gray-800 text-right"></div>
+
+  <div class="mt-4 flex justify-center">
     <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
   </div>
 </div>
 
 <script>
-// Load products from products.json
+// Load products
 let products = [];
 const params = new URLSearchParams(window.location.search);
 const featuredId = params.get('id') || null;
@@ -76,7 +80,7 @@ async function loadProducts() {
   }
 }
 
-// Render featured product
+// Featured product
 function renderFeatured() {
   if(!featuredId) return;
   const featured = products.find(p => p.id === featuredId);
@@ -102,7 +106,7 @@ function renderFeatured() {
   `;
 }
 
-// Render other products
+// Other products
 function renderOtherProducts(filteredProducts) {
   const otherContainer = document.getElementById("other-products");
   otherContainer.innerHTML = '';
@@ -124,34 +128,27 @@ function renderOtherProducts(filteredProducts) {
   });
 }
 
-// Filter products by search + preview dropdown
+// Search filter
 function filterProducts() {
   const query = document.getElementById("searchInput").value.toLowerCase();
   const preview = document.getElementById("searchPreview");
-
   if (!query) {
     preview.classList.add("hidden");
     return;
   }
-
   const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
-  
-  if(filtered.length === 0) {
-    preview.innerHTML = `<div class="p-2 text-gray-500">No results</div>`;
-  } else {
-    preview.innerHTML = filtered.map(p => `
-      <a href="?id=${p.id}" 
-         class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded"
+  preview.innerHTML = filtered.length === 0
+    ? `<div class="p-2 text-gray-500">No results</div>`
+    : filtered.map(p => `
+      <a href="?id=${p.id}" class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded"
          onclick="document.getElementById('searchPreview').classList.add('hidden')">
         <img src="${p.image}" alt="${p.name}" class="w-10 h-10 object-contain rounded">
         <span class="text-gray-700">${p.name}</span>
       </a>
     `).join("");
-  }
   preview.classList.remove("hidden");
 }
 
-// Hide preview when clicking outside
 document.addEventListener("click", (e) => {
   if (!document.getElementById("searchInput").contains(e.target) &&
       !document.getElementById("searchPreview").contains(e.target)) {
@@ -159,7 +156,7 @@ document.addEventListener("click", (e) => {
   }
 });
 
-// Cart functions
+// Cart
 function addToCart(id){
   const product = products.find(p => p.id === id);
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
@@ -184,21 +181,63 @@ function updateCartCount(){
 
 function renderCartItems() {
   const container = document.getElementById("cart-items");
-  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
   container.innerHTML = '';
-  cart.forEach(item => {
+
+  let total = 0;
+  cart.forEach((item, index) => {
+    total += item.price * item.quantity;
     const div = document.createElement('div');
-    div.className = "flex items-center justify-between";
+    div.className = "flex items-center justify-between bg-gray-50 p-2 rounded shadow";
     div.innerHTML = `
-      <img src="${item.image}" alt="${item.name}" class="w-16 h-16 object-contain rounded">
-      <div class="ml-2 flex-1">${item.name} x ${item.quantity}</div>
-      <div>$${(item.price * item.quantity).toFixed(2)}</div>
+      <img src="${item.image}" alt="${item.name}" class="w-12 h-12 object-contain rounded">
+      <div class="ml-2 flex-1">
+        <div class="font-medium text-gray-700">${item.name}</div>
+        <div class="flex items-center space-x-2 mt-1">
+          <button class="px-2 bg-gray-200 rounded" onclick="decreaseQuantity(${index})">−</button>
+          <span>${item.quantity}</span>
+          <button class="px-2 bg-gray-200 rounded" onclick="increaseQuantity(${index})">+</button>
+        </div>
+      </div>
+      <div class="font-bold text-gray-700">$${(item.price * item.quantity).toFixed(2)}</div>
+      <button class="ml-2 text-red-500" onclick="removeItem(${index})">✕</button>
     `;
     container.appendChild(div);
   });
+
+  document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
+  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
-// ✅ Checkout button
+function increaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart[index].quantity++;
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+function decreaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart[index].quantity > 1){
+    cart[index].quantity--;
+  } else {
+    cart.splice(index,1);
+  }
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+function removeItem(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart.splice(index,1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+// Checkout
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
@@ -219,7 +258,275 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
   }
 });
 
-// Initial render
+// Init
+renderCartItems();
+loadProducts();
+updateCartCount();
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en" x-data="{ cartOpen: false }" class="bg-gray-100">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Product Page</title>
+  <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
+
+<!-- Header -->
+<header class="bg-white shadow sticky top-0 z-50">
+  <div class="container mx-auto flex justify-between items-center px-4 py-4">
+    <a href="index.html" class="text-xl font-bold">DjsDopeDesigns</a>
+    <button @click="cartOpen = !cartOpen" class="relative text-gray-700 text-xl">
+      🛒
+      <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
+    </button>
+  </div>
+</header>
+
+<!-- Search Bar -->
+<div class="container mx-auto px-4 py-4 relative">
+  <input 
+    type="text" 
+    id="searchInput" 
+    placeholder="Search products..." 
+    class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"
+    oninput="filterProducts()"
+  >
+  <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
+</div>
+
+<!-- Featured Product -->
+<div class="container mx-auto px-4 my-4 flex justify-center" id="featured-product"></div>
+
+<!-- Other Products -->
+<div class="container mx-auto px-4 mt-8">
+  <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
+</div>
+
+<!-- Sliding Cart -->
+<div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
+     class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
+  <div class="flex justify-between items-center">
+    <h3 class="text-2xl font-medium text-gray-700">Your cart</h3>
+    <button @click="cartOpen = !cartOpen" class="text-gray-600 focus:outline-none">
+      ✕
+    </button>
+  </div>
+  <hr class="my-3">
+  
+  <div id="cart-items" class="space-y-6"></div>
+
+  <!-- ✅ Cart total -->
+  <div id="cart-total" class="mt-6 text-lg font-bold text-gray-800 text-right"></div>
+
+  <div class="mt-4 flex justify-center">
+    <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
+  </div>
+</div>
+
+<script>
+// Load products
+let products = [];
+const params = new URLSearchParams(window.location.search);
+const featuredId = params.get('id') || null;
+
+async function loadProducts() {
+  try {
+    const res = await fetch('products.json');
+    products = await res.json();
+    renderFeatured();
+    renderOtherProducts(products.filter(p => p.id !== featuredId));
+  } catch(err) {
+    console.error("Failed to load products:", err);
+  }
+}
+
+// Featured product
+function renderFeatured() {
+  if(!featuredId) return;
+  const featured = products.find(p => p.id === featuredId);
+  if(!featured) return;
+  const container = document.getElementById("featured-product");
+  container.innerHTML = `
+    <div class="bg-white/80 p-4 rounded-lg shadow-md md:flex md:items-center max-w-4xl w-full">
+      <div class="w-full md:w-1/2">
+        <img src="${featured.image}" alt="${featured.name}" class="w-full h-auto object-contain rounded-lg">
+      </div>
+      <div class="mt-4 md:mt-0 md:ml-6 md:w-1/2 flex flex-col justify-between">
+        <div>
+          <h2 class="text-xl font-bold text-gray-700">${featured.name}</h2>
+          <p class="text-gray-500 my-2">$${(featured.price/100).toFixed(2)}</p>
+          <p class="text-gray-600 mb-4">${featured.description}</p>
+        </div>
+        <div class="flex space-x-2">
+          <button onclick="buyNow('${featured.id}')" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">Order Now</button>
+          <button onclick="addToCart('${featured.id}')" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">🛒</button>
+        </div>
+      </div>
+    </div>
+  `;
+}
+
+// Other products
+function renderOtherProducts(filteredProducts) {
+  const otherContainer = document.getElementById("other-products");
+  otherContainer.innerHTML = '';
+  filteredProducts.forEach(p => {
+    const div = document.createElement('div');
+    div.className = "bg-white/80 p-4 rounded-lg shadow-md flex flex-col items-center justify-between";
+    div.innerHTML = `
+      <div class="w-full aspect-w-1 aspect-h-1 mb-2">
+        <img src="${p.image}" alt="${p.name}" class="w-full h-full object-contain rounded">
+      </div>
+      <div class="text-sm font-medium text-gray-700 mb-1">${p.name}</div>
+      <div class="text-sm text-gray-500 mb-2">$${(p.price/100).toFixed(2)}</div>
+      <div class="flex space-x-2">
+        <a href="?id=${p.id}" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm hover:bg-indigo-500">View</a>
+        <button onclick="addToCart('${p.id}')" class="bg-gray-200 px-2 py-1 rounded hover:bg-gray-300">🛒</button>
+      </div>
+    `;
+    otherContainer.appendChild(div);
+  });
+}
+
+// Search filter
+function filterProducts() {
+  const query = document.getElementById("searchInput").value.toLowerCase();
+  const preview = document.getElementById("searchPreview");
+  if (!query) {
+    preview.classList.add("hidden");
+    return;
+  }
+  const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
+  preview.innerHTML = filtered.length === 0
+    ? `<div class="p-2 text-gray-500">No results</div>`
+    : filtered.map(p => `
+      <a href="?id=${p.id}" class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded"
+         onclick="document.getElementById('searchPreview').classList.add('hidden')">
+        <img src="${p.image}" alt="${p.name}" class="w-10 h-10 object-contain rounded">
+        <span class="text-gray-700">${p.name}</span>
+      </a>
+    `).join("");
+  preview.classList.remove("hidden");
+}
+
+document.addEventListener("click", (e) => {
+  if (!document.getElementById("searchInput").contains(e.target) &&
+      !document.getElementById("searchPreview").contains(e.target)) {
+    document.getElementById("searchPreview").classList.add("hidden");
+  }
+});
+
+// Cart
+function addToCart(id){
+  const product = products.find(p => p.id === id);
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(i => i.id === id);
+  if(existing) existing.quantity++;
+  else cart.push({id: product.id, name: product.name, price: product.price/100, quantity:1, image: product.image});
+  localStorage.setItem("cart", JSON.stringify(cart));
+  updateCartCount();
+  renderCartItems();
+}
+
+function buyNow(id){
+  addToCart(id);
+  window.location.href = 'cart.html';
+}
+
+function updateCartCount(){
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const total = cart.reduce((sum,i) => sum + i.quantity, 0);
+  document.getElementById("cart-count").textContent = total;
+}
+
+function renderCartItems() {
+  const container = document.getElementById("cart-items");
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  container.innerHTML = '';
+
+  let total = 0;
+  cart.forEach((item, index) => {
+    total += item.price * item.quantity;
+    const div = document.createElement('div');
+    div.className = "flex items-center justify-between bg-gray-50 p-2 rounded shadow";
+    div.innerHTML = `
+      <img src="${item.image}" alt="${item.name}" class="w-12 h-12 object-contain rounded">
+      <div class="ml-2 flex-1">
+        <div class="font-medium text-gray-700">${item.name}</div>
+        <div class="flex items-center space-x-2 mt-1">
+          <button class="px-2 bg-gray-200 rounded" onclick="decreaseQuantity(${index})">−</button>
+          <span>${item.quantity}</span>
+          <button class="px-2 bg-gray-200 rounded" onclick="increaseQuantity(${index})">+</button>
+        </div>
+      </div>
+      <div class="font-bold text-gray-700">$${(item.price * item.quantity).toFixed(2)}</div>
+      <button class="ml-2 text-red-500" onclick="removeItem(${index})">✕</button>
+    `;
+    container.appendChild(div);
+  });
+
+  document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
+  localStorage.setItem("cart", JSON.stringify(cart));
+}
+
+function increaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart[index].quantity++;
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+function decreaseQuantity(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart[index].quantity > 1){
+    cart[index].quantity--;
+  } else {
+    cart.splice(index,1);
+  }
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+function removeItem(index){
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart.splice(index,1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCartItems();
+  updateCartCount();
+}
+
+// Checkout
+document.getElementById("checkout-btn").addEventListener("click", async () => {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart.length === 0){
+    alert("Your cart is empty!");
+    return;
+  }
+  try {
+    const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ items: cart })
+    });
+    const data = await res.json();
+    if(data.url) window.location.href = data.url;
+  } catch(err){
+    console.error("Checkout error:", err);
+    alert("Failed to start checkout. Try again.");
+  }
+});
+
+// Init
 renderCartItems();
 loadProducts();
 updateCartCount();
