--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css"> <!-- your custom CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
 
@@ -31,7 +31,6 @@
     class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"
     oninput="filterProducts()"
   >
-  <!-- Search Preview Dropdown -->
   <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
 </div>
 
@@ -54,7 +53,11 @@
   </div>
   <hr class="my-3">
   <div id="cart-items" class="space-y-6"></div>
-  <div class="mt-8 flex justify-center">
+
+  <!-- Total displayed above checkout button -->
+  <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
+
+  <div class="mt-2 flex justify-center">
     <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
   </div>
 </div>
@@ -128,14 +131,11 @@ function renderOtherProducts(filteredProducts) {
 function filterProducts() {
   const query = document.getElementById("searchInput").value.toLowerCase();
   const preview = document.getElementById("searchPreview");
-
   if (!query) {
     preview.classList.add("hidden");
     return;
   }
-
   const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
-  
   if(filtered.length === 0) {
     preview.innerHTML = `<div class="p-2 text-gray-500">No results</div>`;
   } else {
@@ -178,10 +178,12 @@ function buyNow(id){
 
 function updateCartCount(){
   const cart = JSON.parse(localStorage.getItem("cart")) || [];
-  const total = cart.reduce((sum,i) => sum + i.quantity, 0);
-  document.getElementById("cart-count").textContent = total;
+  const totalQty = cart.reduce((sum,i) => sum + i.quantity, 0);
+  document.getElementById("cart-count").textContent = totalQty;
+  updateCartTotal();
 }
 
+// Render cart items
 function renderCartItems() {
   const container = document.getElementById("cart-items");
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
@@ -205,7 +207,9 @@ function renderCartItems() {
     `;
     container.appendChild(div);
   });
+
   localStorage.setItem("cart", JSON.stringify(cart));
+  updateCartTotal();
 }
 
 // Quantity controls
@@ -237,7 +241,14 @@ function removeItem(index){
   updateCartCount();
 }
 
-// ✅ Checkout button
+// Update total display
+function updateCartTotal(){
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const total = cart.reduce((sum,i) => sum + (i.price * i.quantity), 0);
+  document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
+}
+
+// Checkout
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
