--- a/product.html
+++ b/product.html
@@ -23,12 +23,12 @@
 </header>
 
 <!-- Search Bar -->
-<div class="container mx-auto px-4 py-4 relative">
+<div class="container mx-auto px-4 py-4 relative flex justify-center">
   <input 
     type="text" 
     id="searchInput" 
     placeholder="Search products..." 
-    class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"
+    class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 mx-auto"
     oninput="filterProducts()"
   >
   <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
